@@ -1,3 +1,7 @@
+2019-07-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (ptToDouble): Another debug message
+
 2019-07-05  Dirk Eddelbuettel  <edd@debian.org>
 
         * .travis.yml (install): Use r-cran-tinytest from PPA
